# open-manga

./: .editorconfig  .gitignore  README.md  app.go  config.json  go.mod  main.go  makefile  meson.build  wails.json
backend/: app.go
backend/config/: config.go
backend/logger/: logger.go
dox/: TODO.md
frontend/: index.html  package-lock.json  package.json  package.json.md5  tsconfig.json
frontend/src/: app.css  main.ts  style.css
frontend/wailsjs/go/main/: App.d.ts  App.js
res/: xyz.jptrzy.open.manga.gresource.xml
res/style/: App.css
res/ui/: App.blp  OmFilesPreview.blp  OmFilesPreviewEntry.blp  OmFilesPreviewEntry.ui.in  OmImagesPreview.blp
resources/: styles.css  xyz.jptrzy.open.manga.gresource.xml
resources/comp/: images.ui
resources/layout/: App.ui  app.ui  app.ui.old  images_preview.ui
resources/temp/: OmFilesPreview.ui  OmImagesPreview.ui
src/: App.vala  Config.vala  FilesPreview.vala  Helper.vala  ImagesPreview.vala  OmFilesPreview.vala  OmImagesPreview.vala  main.vala
static/: index.html  main.js  styles.css
